src/objects/Phase_CRFs__c.object
<CustomObject>
    <fields>
        <fullName>CRF__c</fullName>
        <label>CRF</label>
        <referenceTo>CRFMaster__c</referenceTo>
        <relationshipLabel>Phases CRFs</relationshipLabel>
        <relationshipName>Phases_CRFs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Next_Due_on__c</fullName>
        <label>Next Due on</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_Cycle__c</fullName>
        <label>Phase Cycle</label>
        <referenceTo>Phase_Cycle__c</referenceTo>
        <relationshipLabel>Phases CRFs</relationshipLabel>
        <relationshipName>Phases_CRFs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Phase CRFs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phase_Cycle__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Phase CRF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases CRFs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>